added footer style

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           <h1>Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
-        </div>
-        <div class="col-lg-6">
+          <div class="col-lg-6">
+          </div>
           <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
@@ -191,8 +191,8 @@
   <section id="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
@@ -200,8 +200,13 @@
   <!-- Footer -->
 
   <footer id="footer">
-
-    <p>© Copyright 2018 TinDog</p>
+    <div class="footer-btn">
+      <a href="https://twitter.com" class="m-2"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.facebook.com/" class="m-2"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://www.instagram.com" class="m-2"><i class="fab fa-instagram "></i></a>
+      <a href="mailto:lexianaweb@gmail.com" class="m-2"><i class="fas fa-envelope"></i></a>
+    </div>
+    <p class="mt-4 text-muted">© Copyright 2018 TinDog</p>
 
   </footer>
 
